js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-function-import-source-no-rest-param.js
DONOTEVALUATE
(
)
;
function
fn
(
)
{
import
.
source
(
.
.
.
[
'
<
module
source
>
'
]
)
;
}
